<resources>
    <string name="app_name">LoginApp</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="google">Google</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="meta">Meta</string>
    <string name="person_avi">Person_avi</string>
    <string name="twitter">Twitter</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>